# RobotechTestTaskServerQt6

./: CMakeLists.txt  README.md
resources/: qml.qrc
resources/qml/: AppTheme.qml  DrawerPinger.qml  DrawerSettings.qml  Separator.qml  main.qml
resources/qml/Helpers/: Colors.qml  Constants.qml  qmldir
src/: CMakeLists.txt  Pinger.cpp  Pinger.h  TcpServerHandler.cpp  TcpServerHandler.h  TransferDataHandler.cpp  TransferDataHandler.h  main.cpp
